<resources>
    <string name="app_name">My Balance Diet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--item title for activity_main_drawer-->
    <string name="my_diet_picker">My Diet Picker</string>
    <string name="my_wheel">My Wheel</string>
    <string name="my_report">My Weekly Report</string>
    <string name="my_bmr">My BMR</string>
    <string name="my_share">Share</string>
    <string name="my_send">Send</string>

    <!--view names for content_main-->
    <string name="greeting_msg">Welcome To My Balance Diet App</string>
    <string name="description">This app help you maintain a healthy diet everyday by
        \n1. providing you a diet picker which is use for you to pick your daily consumption.
        \n2. A nutrition wheel, an editable wheel which can help you to understand
        the proportion of food category you eat daily
        \n3. this app then help you to analyze your eating behavior based on your wheel.
        \n4. then this app will help you to eat healthier by
        letting you know the category of food you need to consume more or less
        \n5. report stores you daily eating status and can
        display your wheel result for up to one week
        \n6. you can send and share your report with others.
    </string>

    <!--view names for activity_sign_in and sign_up-->
    <string name="signin_page_title">Sign In</string>
    <string name="input_name">Username</string>
    <string name="input_pw">Password</string>
    <string name="btn_signin">SIGN IN</string>
    <string name="btn_signup">SIGN UP</string>

    <string name="signup_page_title">Sign Up</string>
    <string name="input_email">Email</string>
    <string name="input_phone">Phone Number</string>

    <!--spinner item in bmr calculator-->
    <string-array name="activity_level">
        <item>Sedentary </item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Extra active</item>
    </string-array>

    <!--view names for play music -->
    <string name="startPlay">Play Music</string>
    <string name="stopPlay">Stop Music</string>


</resources>
