<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dietpicker"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/my_diet_picker"

            />
        <item
            android:id="@+id/nav_dietwheel"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_wheel"

            />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_report" />
        <item
            android:id="@+id/nav_bmr"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/my_bmr" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/my_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/my_send" />
        </menu>
    </item>

</menu>
